--- a/app/src/main/res/layout/activity_top_level.xml
+++ b/app/src/main/res/layout/activity_top_level.xml
@@ -1,18 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".TopLevelActivity" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".TopLevelActivity">
 
-  <ImageView android:layout_width="200dp"
-             android:layout_height="100dp"
-             android:src="@drawable/starbuzz_logo"
-             android:contentDescription="@string/food_delivery_logo" />
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/food_delivery_logo"
+        android:src="@drawable/starbuzz_logo" />
 
-  <ListView android:id="@+id/list_options"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:entries="@array/options" />
-  
+    <ListView
+        android:id="@+id/list_options"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/options" />
+
+    <ListView
+        android:id="@+id/list_categories"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
