Work in progress

--- a/app/src/main/res/layout/activity_top_level.xml
+++ b/app/src/main/res/layout/activity_top_level.xml
@@ -6,8 +6,8 @@
     tools:context=".TopLevelActivity">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:layout_height="150dp"
         android:contentDescription="@string/food_delivery_logo"
         android:src="@drawable/starbuzz_logo" />
 
