--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -3,54 +3,56 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
+    android:weightSum="1"
     tools:context=".FoodActivity">
 
   <ImageView android:id="@+id/photo"
-             android:layout_width="190dp"
-             android:layout_height="190dp" />
+      android:layout_width="fill_parent"
+      android:layout_height="150dp"
+      android:layout_weight="0.04" />
 
   <TextView android:id="@+id/description"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/name"
-            android:layout_width="wrap_content"
+      android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/url"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/phone"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/delivery_time"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/free_delivery_time"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/free_delivery_from"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/free_delivery_with_card"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/card_pay"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/logo_url"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
   <TextView android:id="@+id/rating"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
 </LinearLayout>
