--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,22 +18,13 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="78dp" />
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_alignTop="@+id/btnUpdate"
-        android:layout_alignBottom="@+id/btnUpdate"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/btnUpdate" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
         android:id="@+id/button2"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/tvIsConnected"
@@ -45,5 +36,15 @@
         android:textSize="18dp"
         android:layout_marginBottom="5dp"
         android:text="is connected? " />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="New Text"
+        android:id="@+id/etResponse"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/tvIsConnected" />
 
 </RelativeLayout>
