--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,13 @@
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@+id/tvIsConnected" />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:max="99"
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
